fix: SSG 빌드 시 HTML 주입 위치 오류 수정 및 프로세스 개선
- generate.js: template.replace의 타겟() 누락으로 인해 렌더링 결과가 태그 밖으로 밀려나는 문제 해결- 배포 환경에서 콘텐츠가 root 요소의 형제(sibling)로 생성되어 발생하는 레이아웃 깨짐 및 하이드레이션 에러 수정- 비동기 페이지 생성을 forEach에서 Promise.all로 변경하여 빌드 안정성 확보

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -15,7 +15,7 @@
   </script>
 </head>
 <body>
-<div id="root"><!--app-html--></div>
+<div id="root"></div>
 <script type="module" src="/src/main-client.tsx"></script>
 </body>
 </html>
