--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -15,7 +15,7 @@
   </script>
 </head>
 <body>
-<div id="root"></div>
+<div id="root"><!--app-html--></div>
 <script type="module" src="/src/main-client.tsx"></script>
 </body>
 </html>
